[package]
name = "async_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = "0.11.6"
# tokio = { version = "1", features = ["full"] }

surf = "*"
async-std = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "1"
